expected/main/core/bitdata/bitdata7.err
ERROR: "actual/main/core/bitdata/bitdata7.lc", line 2
bitdata W = W [ z :: V ]
            ^
Width of W is 1 more than expected

ERROR: Aborting after previously reported error

